Avoid warnings for native access from javafx.graphics